src/style.css
html{
    font-family: "Nunito";
    overflow-x: hidden;
}
body{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    background-color: #E9E9E9;
}
.boards {
    display: flex;
    height: 100vh;
}

.board {
    background: #E9E9E9;
    padding: 0!important;
    margin: 0px;
    display: flex;
    flex-direction: column;
}

.board h3 {
    padding: 16px!important;
    width: 100%;
    margin: 0;
    background-color: #F3F3F3;
    font-weight: bold;
    color: #1C1C2E;
}

.dropzone {
    padding: 16px;
    min-width: 282px;
    min-height: 200px;
    justify-content: center;
    height: 100%;
}

.kanbanCard {
    background-color: #FFFF;
    padding: 16px;
    width: 250px;
    margin: auto;
    margin-bottom: 2rem;
    border-radius: 4px;
    font-weight: 600;
    font-size: 16px;
}

.description{
    color: #65656C;
    font-weight: normal;
    font-size: 14px;
}

.red{
    border-left: 5px solid #E2163B;
}
.purple{
    border-left: 5px solid #4515CF;
}
.blue {
    border-left: 5px solid #158CCF;
}
.yellow{
    border-left: 5px solid #EFA20C;
}

.highlight{
    background-color: #D7D7D7cc;
}
.kanbanCard, .dropzone{
    transition: 400ms;
}
.is-dragging{
    cursor: move!important;
    cursor: -webkit-grabbing;
    opacity: .3;
}
.over{
    background-color: rgb(235, 235, 235);
}

.form-inline{
    display: flex;
    align-items: center;
    justify-content: center;
}
label{
    margin:0!important
}
input{
    margin: 0rem 1rem 0rem .5rem!important;
}

